; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_qpeldsp_msa.c_copy_8x8_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_qpeldsp_msa.c_copy_8x8_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32)* @copy_8x8_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_8x8_msa(i32* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 4, i32* %11, align 4
  br label %12

12:                                               ; preds = %16, %4
  %13 = load i32, i32* %11, align 4
  %14 = add nsw i32 %13, -1
  store i32 %14, i32* %11, align 4
  %15 = icmp ne i32 %13, 0
  br i1 %15, label %16, label %43

16:                                               ; preds = %12
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @LD(i32* %17)
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = sext i32 %19 to i64
  %22 = getelementptr inbounds i32, i32* %20, i64 %21
  store i32* %22, i32** %5, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @LD(i32* %23)
  store i32 %24, i32* %10, align 4
  %25 = load i32, i32* %6, align 4
  %26 = load i32*, i32** %5, align 8
  %27 = sext i32 %25 to i64
  %28 = getelementptr inbounds i32, i32* %26, i64 %27
  store i32* %28, i32** %5, align 8
  %29 = load i32, i32* %9, align 4
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @SD(i32 %29, i32* %30)
  %32 = load i32, i32* %8, align 4
  %33 = load i32*, i32** %7, align 8
  %34 = sext i32 %32 to i64
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  store i32* %35, i32** %7, align 8
  %36 = load i32, i32* %10, align 4
  %37 = load i32*, i32** %7, align 8
  %38 = call i32 @SD(i32 %36, i32* %37)
  %39 = load i32, i32* %8, align 4
  %40 = load i32*, i32** %7, align 8
  %41 = sext i32 %39 to i64
  %42 = getelementptr inbounds i32, i32* %40, i64 %41
  store i32* %42, i32** %7, align 8
  br label %12

43:                                               ; preds = %12
  ret void
}

declare dso_local i32 @LD(i32*) #1

declare dso_local i32 @SD(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
